2011-03-04	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1748/bsps
	* clock/ckinit.c: When the clock tick generates an interrupt WHILE we
	have interrupts disabled doing a get TOD or uptime, the get
	nanoseconds handler was returning a bogusly large number.

2011-03-03	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1750/bsps
	* console/erc32_console.c: The new console driver did not support
	polled mode. It also had a bug in which it could lose a transmitter
	interrupt.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-05-11	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* startup/linkcmds: Include basic linker command file and define only
	board specific values.  Define RAM and PROM limits only if not defined
	by command line arguments.
	* Makefile.am, preinstall.am: Reflect changes above.

2010-04-27	Tiemen Schut <T.Schut@sron.nl>

	PR 1506/bsps
	* console/console.c: Removed.
	* console/erc32_console.c: New file.  Use shared console driver.
	Make sure interrupt support works.  PPPD confirmed on sis.
	* Makefile.am: Reflect changes above.

2009-12-10	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c:
	Reflect changes to rtems_termios_callbacks->write.

2009-11-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Switch to ../../shared/bspstart.c

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/erc32.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* console/console.c: Fix warning.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/erc32.cfg: New (relocated from /make/custom).
	* make/custom/sis.cfg: New (relocated from /make/custom).

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.
